force-app/main/default/objects/Returns__c/Returns__c.object-meta.xml
<CustomObject>
    <label>Return</label>
    <nameField>
        <displayFormat>RMA-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Returns</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>