force-app/main/default/objects/Returns__c/fields/Planned_Pick_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Pick_up_Date__c</fullName>
    <inlineHelpText>Enter Date which we are planning to pick-up the return products</inlineHelpText>
    <label>Planned Pick-up Date</label>
    <type>Date</type>
</CustomField>