force-app/main/default/objects/Returns__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>