force-app/main/default/objects/Returns__c/fields/RMA_Notes__c.field-meta.xml
<CustomField>
    <fullName>RMA_Notes__c</fullName>
    <label>RMA Notes</label>
    <type>TextArea</type>
</CustomField>