force-app/main/default/objects/Returns__c/fields/Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest__c</fullName>
    <inlineHelpText>The original Shipping Manifest that tendered the shipment.</inlineHelpText>
    <label>Shipping Manifest</label>
    <referenceTo>Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>