force-app/main/default/objects/Returns__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Returns (Supplier Name)</relationshipLabel>
    <relationshipName>Returns1</relationshipName>
    <type>Lookup</type>
</CustomField>