force-app/main/default/objects/Returns__c/fields/Total_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Excise_Tax__c</fullName>
    <label>Total Excise Tax</label>
    <summarizedField>Return_Line__c.Line_Total_Product_Price__c</summarizedField>
    <summaryForeignKey>Return_Line__c.Return__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>