force-app/main/default/objects/Returns__c/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <label>Total Qty</label>
    <summarizedField>Return_Line__c.Return_Qty__c</summarizedField>
    <summaryForeignKey>Return_Line__c.Return__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>