force-app/main/default/objects/Returns__c/fields/Total_RMA_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_RMA_Amount__c</fullName>
    <formula>Total_Product_Price__c +  Total_Excise_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total RMA Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>